specs/blueprints/errors/parsing/continuation_outside_field.eno
# Parsing a continuation without any prior element

-- input
| continuation
-- input

## ParseError

-- text
The continuation in line 1 is not contained within a field.
-- text

-- snippet
   Line | Content
 >    1 | | continuation
-- snippet

selection: [0,0] => [0,14]